generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h

typedef struct ImTextureRef_t ImTextureRef;
typedef unsigned long long ImU64;  // 64-bit unsigned integer
typedef struct ImTextureData_t ImTextureData;                        // Specs and pixel storage for a texture used by Dear ImGui.
typedef int ImGuiWindowFlags;       // -> enum ImGuiWindowFlags_     // Flags: for Begin(), BeginChild()
typedef ImU64 ImTextureID;  // Default: store up to 64-bits (any pointer or integer). A majority of backends are ok with that.
// Windows
// - Begin() = push window to the stack and start appending to it. End() = pop window from the stack.
// - Passing 'bool* p_open != NULL' shows a window-closing widget in the upper-right corner of the window,
//   which clicking will set the boolean to false when clicked.
// - You may append multiple times to the same window during the same frame by calling Begin()/End() pairs multiple times.
//   Some information such as 'flags' or 'p_open' will only be considered by the first call to Begin().
// - Begin() return false to indicate the window is collapsed or fully clipped, so you may early out and omit submitting
//   anything to the window. Always call a matching End() for each Begin() call, regardless of its return value!
//   [Important: due to legacy reason, Begin/End and BeginChild/EndChild are inconsistent with all other functions
//    such as BeginMenu/EndMenu, BeginPopup/EndPopup, etc. where the EndXXX call should only be called if the corresponding
//    BeginXXX function returned true. Begin and BeginChild are the only odd ones out. Will be fixed in a future update.]
// - Note that the bottom of window stack always contains a window called "Debug".
CIMGUI_API bool ImGui_Begin(const char* name, bool* p_open /* = NULL */, ImGuiWindowFlags flags /* = 0 */);
// Most standard backends only support RGBA32 but we provide a single channel option for low-resource/embedded systems.
typedef enum
{
    ImTextureFormat_RGBA32,  // 4 components per pixel, each is unsigned 8-bit. Total size = TexWidth * TexHeight * 4
    ImTextureFormat_Alpha8,  // 1 component per pixel, each is unsigned 8-bit. Total size = TexWidth * TexHeight
} ImTextureFormat;
// Status of a texture to communicate with Renderer Backend.
typedef enum
{
    ImTextureStatus_OK,
    ImTextureStatus_Destroyed,    // Backend destroyed the texture.
    ImTextureStatus_WantCreate,   // Requesting backend to create the texture. Set status OK when done.
    ImTextureStatus_WantUpdates,  // Requesting backend to update specific blocks of pixels (write to texture portions which have never been used before). Set status OK when done.
    ImTextureStatus_WantDestroy,  // Requesting backend to destroy the texture. Set status to Destroyed when done.
} ImTextureStatus;
// Specs and pixel storage for a texture used by Dear ImGui.
// This is only useful for (1) core library and (2) backends. End-user/applications do not need to care about this.
// Renderer Backends will create a GPU-side version of this.
// Why does we store two identifiers: TexID and BackendUserData?
// - ImTextureID    TexID           = lower-level identifier stored in ImDrawCmd. ImDrawCmd can refer to textures not created by the backend, and for which there's no ImTextureData.
// - void*          BackendUserData = higher-level opaque storage for backend own book-keeping. Some backends may have enough with TexID and not need both.
// In columns below: who reads/writes each fields? 'r'=read, 'w'=write, 'core'=main library, 'backend'=renderer backend
struct ImTextureData_t
{
    //------------------------------------------ core / backend ---------------------------------------
    int                    UniqueID;              // w    -   // [DEBUG] Sequential index to facilitate identifying a texture when debugging/printing. Unique per atlas.
    ImTextureStatus        Status;                // rw   rw  // ImTextureStatus_OK/_WantCreate/_WantUpdates/_WantDestroy. Always use SetStatus() to modify!
    void*                  BackendUserData;       // -    rw  // Convenience storage for backend. Some backends may have enough with TexID.
    ImTextureID            TexID;                 // r    w   // Backend-specific texture identifier. Always use SetTexID() to modify! The identifier will stored in ImDrawCmd::GetTexID() and passed to backend's RenderDrawData function.
    ImTextureFormat        Format;                // w    r   // ImTextureFormat_RGBA32 (default) or ImTextureFormat_Alpha8
    int                    Width;                 // w    r   // Texture width
    int                    Height;                // w    r   // Texture height
    int                    BytesPerPixel;         // w    r   // 4 or 1
    unsigned char*         Pixels;                // w    r   // Pointer to buffer holding 'Width*Height' pixels and 'Width*Height*BytesPerPixels' bytes.
    ImTextureRect          UsedRect;              // w    r   // Bounding box encompassing all past and queued Updates[].
    ImTextureRect          UpdateRect;            // w    r   // Bounding box encompassing all queued Updates[].
    ImVector_ImTextureRect Updates;               // w    r   // Array of individual updates.
    int                    UnusedFrames;          // w    r   // In order to facilitate handling Status==WantDestroy in some backend: this is a count successive frames where the texture was not used. Always >0 when Status==WantDestroy.
    unsigned short         RefCount;              // w    r   // Number of contexts using this texture. Used during backend shutdown.
    bool                   UseColors;             // w    r   // Tell whether our texture data is known to use colors (rather than just white + alpha).
    bool                   WantDestroyNextFrame;  // rw   -   // [Internal] Queued to set ImTextureStatus_WantDestroy next frame. May still be used in the current frame.
};
CIMGUI_API void         ImTextureData_Create(ImTextureData* self, ImTextureFormat format, int w, int h);
CIMGUI_API void         ImTextureData_DestroyPixels(ImTextureData* self);
CIMGUI_API void*        ImTextureData_GetPixels(ImTextureData* self);
CIMGUI_API void*        ImTextureData_GetPixelsAt(ImTextureData* self, int x, int y);
CIMGUI_API int          ImTextureData_GetSizeInBytes(const ImTextureData* self);
CIMGUI_API int          ImTextureData_GetPitch(const ImTextureData* self);
CIMGUI_API ImTextureID  ImTextureData_GetTexID(const ImTextureData* self);
// Called by Renderer backend
// - Call SetTexID() and SetStatus() after honoring texture requests. Never modify TexID and Status directly!
// - A backend may decide to destroy a texture that we did not request to destroy, which is fine (e.g. freeing resources), but we immediately set the texture back in _WantCreate mode.
CIMGUI_API void         ImTextureData_SetTexID(ImTextureData* self, ImTextureID tex_id);
CIMGUI_API void         ImTextureData_SetStatus(ImTextureData* self, ImTextureStatus status);