generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImTextureData.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImTextureData where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void Create(ImTextureData* self, ImTextureFormat format, int w, int h)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_Create"
  imTextureData_Create :: (Ptr ImTextureData) -> ImTextureFormat -> CInt -> CInt -> IO ()
-- C: void DestroyPixels(ImTextureData* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_DestroyPixels"
  imTextureData_DestroyPixels :: (Ptr ImTextureData) -> IO ()
-- C: int GetPitch(const ImTextureData* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_GetPitch"
  imTextureData_GetPitch :: (Ptr ImTextureData) -> IO CInt
-- C: void* GetPixels(ImTextureData* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_GetPixels"
  imTextureData_GetPixels :: (Ptr ImTextureData) -> IO (Ptr ())
-- C: void* GetPixelsAt(ImTextureData* self, int x, int y)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_GetPixelsAt"
  imTextureData_GetPixelsAt :: (Ptr ImTextureData) -> CInt -> CInt -> IO (Ptr ())
-- C: int GetSizeInBytes(const ImTextureData* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_GetSizeInBytes"
  imTextureData_GetSizeInBytes :: (Ptr ImTextureData) -> IO CInt
-- C: ImTextureID GetTexID(const ImTextureData* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_GetTexID"
  imTextureData_GetTexID :: (Ptr ImTextureData) -> IO ImTextureID
foreign import capi unsafe "DearImGuiWrappers.h ImTextureData_GetTexRef_wrap"
  c_imTextureData_GetTexRef :: (Ptr ImTextureData) -> (Ptr ImTextureRef) -> IO ()

imTextureData_GetTexRef :: (Ptr ImTextureData) -> IO ImTextureRef
imTextureData_GetTexRef self =
  alloca $ \_pOut -> c_imTextureData_GetTexRef self _pOut >> peek _pOut

-- C: void SetStatus(ImTextureData* self, ImTextureStatus status)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_SetStatus"
  imTextureData_SetStatus :: (Ptr ImTextureData) -> ImTextureStatus -> IO ()
-- C: void SetTexID(ImTextureData* self, ImTextureID tex_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImTextureData_SetTexID"
  imTextureData_SetTexID :: (Ptr ImTextureData) -> ImTextureID -> IO ()
